--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -28,7 +28,7 @@
         android:id="@+id/jobDispatcher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/job_dispatcher" />
+        android:text="@string/job_scheduler" />
     <Button
         android:id="@+id/jobIntentService"
         android:layout_width="match_parent"
