renamed button id

--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:text="@string/intent_service" />
     <Button
-        android:id="@+id/jobDispatcher"
+        android:id="@+id/jobScheduler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/job_scheduler" />
