change background ImageButton StartAndStopTimer

--- a/app/src/main/res/layout/fragment_service_timer.xml
+++ b/app/src/main/res/layout/fragment_service_timer.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/custom_button_start"
         android:src="@drawable/ic_replay_24"
         android:text="@string/reset"
         android:visibility="invisible"
@@ -41,7 +41,7 @@
         android:layout_width="81dp"
         android:layout_height="77dp"
         android:layout_marginTop="52dp"
-        android:background="@drawable/custom_button"
+        android:background="@drawable/custom_button_start"
         android:backgroundTint="@color/liteBlue"
         android:src="@drawable/ic__play_arrow_24"
         app:layout_constraintEnd_toEndOf="@+id/tvTimer"
