--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,5 +9,8 @@
         android:title=""
         android:icon="@drawable/ic_time_24"/>
 
+    <item android:id="@+id/batteryFragment"
+        android:title=""
+        android:icon="@drawable/ic_person"/>
 
 </menu>
