ImageView ivCallContact added

--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/textViewNameContact"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:gravity="center"
@@ -37,13 +37,21 @@
 
         <TextView
             android:id="@+id/textViewContactNumber"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/black"
             android:layout_marginBottom="20dp"
             android:textSize="18sp" />
+
     </LinearLayout>
-
-
+    <ImageView
+        android:id="@+id/ivCallContact"
+        android:src="@drawable/ic_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
