--- a/app/src/main/res/layout/fragment_content_provider.xml
+++ b/app/src/main/res/layout/fragment_content_provider.xml
@@ -24,12 +24,25 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="68dp"
         android:backgroundTint="@color/liteBlue"
-        android:text="@string/read_contacts"
+        android:text="ReadContact"
         android:textColor="@color/white"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="0dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonWriteContacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="124dp"
+        android:backgroundTint="@color/liteBlue"
+        android:text="Wtite Contact"
+        android:textColor="@color/white"
+        app:cornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
