--- a/app/src/main/res/layout/fragment_add_contact_number.xml
+++ b/app/src/main/res/layout/fragment_add_contact_number.xml
@@ -5,15 +5,16 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/ivAvatar"
-        android:src="@drawable/ic_baseline_add_a_photo_24"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"/>
+        android:src="@drawable/ic_baseline_add_a_photo_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,32 +22,45 @@
         android:layout_marginTop="80dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Имя"
-            android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
-
-        <EditText
-            android:id="@+id/edtNameContact"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutNameContact"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            app:helperTextTextColor="@color/red"
             android:layout_width="match_parent"
-            android:hint="Имя"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Телефон"
-            android:textSize="20sp"
-            android:layout_marginBottom="5dp"/>
+            app:helperText="Enter name"
+            android:layout_margin="20dp"
+            android:textSize="20sp">
 
-        <EditText
-            android:id="@+id/edtTelNumber"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtNameContact"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/name"
+                android:inputType="text"
+                android:lines="1" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayoutTelNumber"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
-            android:hint="Телефон"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:helperTextTextColor="@color/red"
+            app:counterEnabled="true"
+            app:counterMaxLength="11"
+            app:helperText="Enter phone number"
+            android:layout_margin="20dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edtTelNumber"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:maxLength="11"
+                android:hint="@string/number"
+                android:inputType="phone"
+                android:lines="1"/>
 
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
 
@@ -54,26 +68,27 @@
         android:id="@+id/buttonCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
         android:layout_marginBottom="124dp"
         android:backgroundTint="@color/liteBlue"
-        android:text="Отмена"
+        android:text="@string/cancel"
         android:textColor="@color/white"
         app:cornerRadius="10dp"
-        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="124dp"
         android:backgroundTint="@color/liteBlue"
-        android:text="Сохранить"
+        android:text="@string/save"
         android:textColor="@color/white"
         app:cornerRadius="10dp"
-        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
