--- a/app/src/main/res/layout/fragment_batery.xml
+++ b/app/src/main/res/layout/fragment_batery.xml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:orientation="vertical"
-    android:gravity="center">
-
-
- <ImageView
-     android:id="@+id/imageViewBatteryLevel"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:visibility="invisible"
-     android:layout_marginBottom="20dp"/>
-
-
- <TextView
-     android:id="@+id/batteryStatus"
-     android:layout_width="wrap_content"
-     android:textSize="20sp"
-     android:layout_height="wrap_content"/>
-
-
- <com.google.android.material.button.MaterialButton
-     android:id="@+id/buttonGetBatteryLevel"
-     app:cornerRadius="10dp"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:text="@string/check_phone_charge_level"
-     android:layout_marginTop="20dp"
-     android:backgroundTint="@color/liteBlue"/>
-
+    android:gravity="center"
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/imageViewBatteryLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/iv_battery_level_margin_bottom"
+        android:contentDescription="@string/picture_showing_battery_level"
+        android:visibility="invisible" />
+    <TextView
+        android:id="@+id/batteryStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/tv_battery_status_text_size" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonGetBatteryLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/mb_margin_top"
+        android:backgroundTint="@color/liteBlue"
+        android:text="@string/check_phone_charge_level"
+        app:cornerRadius="@dimen/mb_corner_radius" />
 </LinearLayout>
