--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="size_tv_timer">40sp</dimen>
+    <dimen name="height_bottom_navigation">40dp</dimen>
+    <dimen name="iv_avatar_margin_top">20dp</dimen>
+    <dimen name="margin_top_ll">80dp</dimen>
+    <dimen name="text_input_layout_margin">20dp</dimen>
+    <dimen name="text_input_edit_text_size">20sp</dimen>
+    <dimen name="material_bottom_margin_bottom">124dp</dimen>
+    <dimen name="mb_corner_radius">10dp</dimen>
+    <dimen name="mb_margin_end">20dp</dimen>
+    <dimen name="mb_margin_start">20dp</dimen>
+    <dimen name="tv_battery_status_text_size">20sp</dimen>
+    <dimen name="mb_margin_top">20dp</dimen>
+    <dimen name="iv_battery_level_margin_bottom">20dp</dimen>
+    <dimen name="fab_margin_end">20dp</dimen>
+    <dimen name="fab_margin_start">20dp</dimen>
+    <dimen name="fab_margin_bottom">50dp</dimen>
+    <dimen name="image_button_start_and_stop_margin_top">52dp</dimen>
+    <dimen name="image_button_start_and_stop_height">77dp</dimen>
+    <dimen name="image_button_start_and_stop_width">81dp</dimen>
+    <dimen name="card_view_margin">10dp</dimen>
+    <dimen name="iv_call_contact_margin_end">20dp</dimen>
+    <dimen name="tv_contact_number_text_size">18sp</dimen>
+    <dimen name="tv_contact_number_margin_bottom">20dp</dimen>
+    <dimen name="tv_name_contact_text_size">20sp</dimen>
+    <dimen name="tv_name_contact_margin_bottom">10dp</dimen>
+    <dimen name="iv_avatar_contact_margin_start">20dp</dimen>
+    <dimen name="iv_avatar_contact_border_width">1dp</dimen>
+    <dimen name="tv_timer_text_size">40sp</dimen>
+    <dimen name="button_reset_margin_top">52dp</dimen>
+    <dimen name="tv_timer_lw">279dp</dimen>
+    <dimen name="tv_timer_lh">273dp</dimen>
 
 </resources>
