--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -9,8 +9,8 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivAvatarContacts"
         app:civ_border_width="@dimen/iv_avatar_contact_border_width"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_person"
         android:layout_marginStart="@dimen/iv_avatar_contact_margin_start"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +24,8 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivAvatarContacts"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textViewNameContact"
@@ -39,12 +40,13 @@
             android:id="@+id/textViewContactNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/tv_contact_number_margin_bottom"
             android:gravity="center"
             android:textColor="@color/black"
-            android:layout_marginBottom="@dimen/tv_contact_number_margin_bottom"
             android:textSize="@dimen/tv_contact_number_text_size" />
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/ivCallContact"
         android:src="@drawable/ic_call"
